--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -103,6 +103,8 @@
 	"block.luckytntmod.mountaintop_removal" : "Bergspitzenabbau",
 	"block.luckytntmod.dust_bowl" : "Dust Bowl",
 	"block.luckytntmod.the_revolution" : "Die Revolution",
+	"block.luckytntmod.pompeii" : "Pompeii",
+	"block.luckytntmod.lucky_tnt" : "Lucky TNT",
 			
 	"block.luckytntmod.nuclear_waste" : "Atomm\u00FCll",
 	"block.luckytntmod.uranium_ore" : "Uranerz",
@@ -224,6 +226,7 @@
 	"entity.luckytntmod.mountaintop_removal" : "Bergspitzenabbau",
 	"entity.luckytntmod.dust_bowl" : "Dust Bowl",
 	"entity.luckytntmod.the_revolution" : "Die Revolution",
+	"entity.luckytntmod.pompeii" : "Pompeii",
 		
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.spiral_projectile" : "Spiralen TNT",
@@ -232,6 +235,7 @@
 	"entity.luckytntmod.cluster_bomb" : "Streubombe",
 	"entity.luckytntmod.bomb" : "Bombe",
 	"entity.luckytntmod.ice_meteor" : "Eismeteor",
+	"entity.luckytntmod.pompeii_projectile" : "Pompeii Projektil",
 			
 	"item_group.luckytntmod.normal_tnt" : "Normale TNTs",
 	"item_group.luckytntmod.other" : "Anderes",
