--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -105,6 +105,13 @@
 	"block.luckytntmod.the_revolution" : "Die Revolution",
 	"block.luckytntmod.pompeii" : "Pompeii",
 	"block.luckytntmod.lucky_tnt" : "Lucky TNT",
+	"block.luckytntmod.chicxulub" : "Chicxulub",
+	"block.luckytntmod.unbreakable_tnt" : "Unzerst\u00F6rbares TNT",
+	"block.luckytntmod.end_gate" : "Endtor",
+	"block.luckytntmod.dense_tnt" : "Dichtes TNT",
+	"block.luckytntmod.hyperion" : "Hyperion",
+	"block.luckytntmod.tnt_x2000" : "TNT x2000",
+	"block.luckytntmod.tsar_bomba" : "Zar Bombe",
 			
 	"block.luckytntmod.nuclear_waste" : "Atomm\u00FCll",
 	"block.luckytntmod.uranium_ore" : "Uranerz",
@@ -227,6 +234,13 @@
 	"entity.luckytntmod.dust_bowl" : "Dust Bowl",
 	"entity.luckytntmod.the_revolution" : "Die Revolution",
 	"entity.luckytntmod.pompeii" : "Pompeii",
+	"entity.luckytntmod.chicxulub" : "Chicxulub",
+	"entity.luckytntmod.unbreakable_tnt" : "Unzerst\u00F6rbares TNT",
+	"entity.luckytntmod.end_gate" : "Endtor",
+	"entity.luckytntmod.dense_tnt" : "Dichtes TNT",
+	"entity.luckytntmod.hyperion" : "Hyperion",
+	"entity.luckytntmod.tnt_x2000" : "TNT x2000",
+	"entity.luckytntmod.tsar_bomba" : "Zar Bombe",
 		
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.spiral_projectile" : "Spiralen TNT",
@@ -236,6 +250,8 @@
 	"entity.luckytntmod.bomb" : "Bombe",
 	"entity.luckytntmod.ice_meteor" : "Eismeteor",
 	"entity.luckytntmod.pompeii_projectile" : "Pompeii Projektil",
+	"entity.luckytntmod.chicxulub_meteor": "Chicxulub Meteorit",
+	"entity.luckytntmod.tsar_bomba_bomb" : "Zar Bombe Bombe",
 			
 	"item_group.luckytntmod.normal_tnt" : "Normales TNT",
 	"item_group.luckytntmod.other" : "Anderes",
