--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -105,6 +105,13 @@
 	"block.luckytntmod.the_revolution" : "The Revolution",
 	"block.luckytntmod.pompeii" : "Pompeii",
 	"block.luckytntmod.lucky_tnt" : "Lucky TNT",
+	"block.luckytntmod.chicxulub" : "Chicxulub",
+	"block.luckytntmod.unbreakable_tnt" : "Unbreakable TNT",
+	"block.luckytntmod.end_gate" : "End Gate",
+	"block.luckytntmod.dense_tnt" : "Dense TNT",
+	"block.luckytntmod.hyperion" : "Hyperion",
+	"block.luckytntmod.tnt_x2000" : "TNT x2000",
+	"block.luckytntmod.tsar_bomba" : "Tsar Bomba",
 	
 	"block.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"block.luckytntmod.uranium_ore" : "Uranium Ore",
@@ -228,6 +235,13 @@
 	"entity.luckytntmod.dust_bowl" : "Dust Bowl",
 	"entity.luckytntmod.the_revolution" : "The Revolution",
 	"entity.luckytntmod.pompeii" : "Pompeii",
+	"entity.luckytntmod.chicxulub" : "Chicxulub",
+	"entity.luckytntmod.unbreakable_tnt" : "Unbreakable TNT",
+	"entity.luckytntmod.end_gate" : "End Gate",
+	"entity.luckytntmod.dense_tnt" : "Dense TNT",
+	"entity.luckytntmod.hyperion" : "Hyperion",
+	"entity.luckytntmod.tnt_x2000" : "TNT x2000",
+	"entity.luckytntmod.tsar_bomba" : "Tsar Bomba",
 				
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.spiral_projectile" : "Spiral TNT",
@@ -237,6 +251,8 @@
 	"entity.luckytntmod.bomb" : "Bomb",
 	"entity.luckytntmod.ice_meteor" : "Ice Meteor",
 	"entity.luckytntmod.pompeii_projectile" : "Pompeii Projectile",
+	"entity.luckytntmod.chicxulub_meteor": "Chicxulub Meteor",
+	"entity.luckytntmod.tsar_bomba_bomb" : "Tsar Bomba Bomb",
 		
 	"item_group.luckytntmod.normal_tnt" : "Normal TNT",
 	"item_group.luckytntmod.other" : "Other",
