--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -112,6 +112,8 @@
 	"block.luckytntmod.hyperion" : "Hyperion",
 	"block.luckytntmod.tnt_x2000" : "TNT x2000",
 	"block.luckytntmod.tsar_bomba" : "Tsar Bomba",
+	"block.luckytntmod.wither_storm" : "Wither Storm",
+	"block.luckytntmod.leaping_tnt" : "Leaping TNT",
 	
 	"block.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"block.luckytntmod.uranium_ore" : "Uranium Ore",
@@ -242,6 +244,8 @@
 	"entity.luckytntmod.hyperion" : "Hyperion",
 	"entity.luckytntmod.tnt_x2000" : "TNT x2000",
 	"entity.luckytntmod.tsar_bomba" : "Tsar Bomba",
+	"entity.luckytntmod.wither_storm" : "Wither Storm",
+	"entity.luckytntmod.leaping_tnt" : "Leaping TNT",
 				
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.spiral_projectile" : "Spiral TNT",
