--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -114,6 +114,7 @@
 	"block.luckytntmod.tsar_bomba" : "Zar Bombe",
 	"block.luckytntmod.wither_storm" : "Wither Storm",
 	"block.luckytntmod.leaping_tnt" : "H\u00FCpfendes TNT",
+	"block.luckytntmod.russian_roulette" : "Russisches Roulette",
 			
 	"block.luckytntmod.nuclear_waste" : "Atomm\u00FCll",
 	"block.luckytntmod.uranium_ore" : "Uranerz",
@@ -245,6 +246,7 @@
 	"entity.luckytntmod.tsar_bomba" : "Zar Bombe",
 	"entity.luckytntmod.wither_storm" : "Wither Storm",
 	"entity.luckytntmod.leaping_tnt" : "H\u00FCpfendes TNT",
+	"entity.luckytntmod.russian_roulette" : "Russisches Roulette",
 		
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.spiral_projectile" : "Spiralen TNT",
