--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -114,6 +114,7 @@
 	"block.luckytntmod.tsar_bomba" : "Tsar Bomba",
 	"block.luckytntmod.wither_storm" : "Wither Storm",
 	"block.luckytntmod.leaping_tnt" : "Leaping TNT",
+	"block.luckytntmod.russian_roulette" : "Russian Roulette",
 	
 	"block.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"block.luckytntmod.uranium_ore" : "Uranium Ore",
@@ -246,6 +247,7 @@
 	"entity.luckytntmod.tsar_bomba" : "Tsar Bomba",
 	"entity.luckytntmod.wither_storm" : "Wither Storm",
 	"entity.luckytntmod.leaping_tnt" : "Leaping TNT",
+	"entity.luckytntmod.russian_roulette" : "Russian Roulette",
 				
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.spiral_projectile" : "Spiral TNT",
