--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -62,7 +62,7 @@
 	"block.luckytntmod.cluster_bomb_tnt" : "Streubombe",
 	"block.luckytntmod.air_strike" : "Luftschlag",
 	"block.luckytntmod.spamming_tnt" : "Zum\u00FCllendes TNT",
-	"block.luckytntmod.bouncing_tnt" : "H\u00FCpfendes TNT",
+	"block.luckytntmod.bouncing_tnt" : "Abprallendes TNT",
 	"block.luckytntmod.roulette_tnt" : "Roulette TNT",
 	"block.luckytntmod.sensor_tnt" : "Sensor TNT",
 	"block.luckytntmod.rainbow_firework" : "Regenbogen Feuerwerk",
