--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -115,6 +115,7 @@
 	"block.luckytntmod.wither_storm" : "Wither Storm",
 	"block.luckytntmod.leaping_tnt" : "H\u00FCpfendes TNT",
 	"block.luckytntmod.russian_roulette" : "Russisches Roulette",
+	"block.luckytntmod.knockback_tnt" : "R\u00FCcksto\u00DF TNT",
 			
 	"block.luckytntmod.nuclear_waste" : "Atomm\u00FCll",
 	"block.luckytntmod.uranium_ore" : "Uranerz",
@@ -247,6 +248,7 @@
 	"entity.luckytntmod.wither_storm" : "Wither Storm",
 	"entity.luckytntmod.leaping_tnt" : "H\u00FCpfendes TNT",
 	"entity.luckytntmod.russian_roulette" : "Russisches Roulette",
+	"entity.luckytntmod.knockback_tnt" : "R\u00FCcksto\u00DF TNT",
 		
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.spiral_projectile" : "Spiralen TNT",
