--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -51,6 +51,7 @@
 	"block.luckytntmod.walking_tnt" : "Laufendes TNT",
 	"block.luckytntmod.wool_tnt" : "Wolle TNT",
 	"block.luckytntmod.say_goodbye" : "Sag auf Wiedersehen",
+	"block.luckytntmod.angry_miners" : "W\u00FCtendes Minenarbeiter",
 	"block.luckytntmod.withering_tnt" : "Ausd\u00f6rrendes TNT",
 	"block.luckytntmod.nuclear_waste_tnt" : "Atomm\u00FCll TNT",
 	"block.luckytntmod.staic_tnt" : "Statisches TNT",
@@ -187,6 +188,7 @@
 	"entity.luckytntmod.walking_tnt" : "Laufendes TNT",
 	"entity.luckytntmod.wool_tnt" : "Wolle TNT",
 	"entity.luckytntmod.say_goodbye" : "Sag auf Wiedersehen",
+	"entity.luckytntmod.angry_miners" : "W\u00FCtendes Minenarbeiter",
 	"entity.luckytntmod.withering_tnt" : "Ausd\u00f6rrendes TNT",
 	"entity.luckytntmod.nuclear_waste_tnt" : "Atomm\u00FCll TNT",
 	"entity.luckytntmod.staic_tnt" : "Statisches TNT",
