--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -51,6 +51,7 @@
 	"block.luckytntmod.walking_tnt" : "Walking TNT",
 	"block.luckytntmod.wool_tnt" : "Wool TNT",
 	"block.luckytntmod.say_goodbye" : "Say Goodbye",
+	"block.luckytntmod.angry_miners" : "Angry Miners",
 	"block.luckytntmod.withering_tnt" : "Withering TNT",
 	"block.luckytntmod.nuclear_waste_tnt" : "Nuclear Waste TNT",
 	"block.luckytntmod.staic_tnt" : "Static TNT",
@@ -188,6 +189,7 @@
 	"entity.luckytntmod.walking_tnt" : "Walking TNT",
 	"entity.luckytntmod.wool_tnt" : "Wool TNT",
 	"entity.luckytntmod.say_goodbye" : "Say Goodbye",
+	"entity.luckytntmod.angry_miners" : "Angry Miners",
 	"entity.luckytntmod.withering_tnt" : "Withering TNT",
 	"entity.luckytntmod.nuclear_waste_tnt" : "Nuclear Waste TNT",
 	"entity.luckytntmod.staic_tnt" : "Static TNT",
