--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -117,6 +117,11 @@
 	"block.luckytntmod.leaping_tnt" : "H\u00FCpfendes TNT",
 	"block.luckytntmod.russian_roulette" : "Russisches Roulette",
 	"block.luckytntmod.knockback_tnt" : "R\u00FCcksto\u00DF TNT",
+	"block.luckytntmod.midas_tnt" : "Midas TNT",
+	"block.luckytntmod.new_years_firework" : "Silvester Feuerwerk",
+	"block.luckytntmod.pulsar_tnt" : "Pulsar TNT",
+	"block.luckytntmod.lightning_storm" : "Gewitter",
+	"block.luckytntmod.silk_touch_tnt" : "Behutsamkeit TNT",
 			
 	"block.luckytntmod.nuclear_waste" : "Atomm\u00FCll",
 	"block.luckytntmod.uranium_ore" : "Uranerz",
@@ -253,6 +258,11 @@
 	"entity.luckytntmod.leaping_tnt" : "H\u00FCpfendes TNT",
 	"entity.luckytntmod.russian_roulette" : "Russisches Roulette",
 	"entity.luckytntmod.knockback_tnt" : "R\u00FCcksto\u00DF TNT",
+	"entity.luckytntmod.midas_tnt" : "Midas TNT",
+	"entity.luckytntmod.new_years_firework" : "Silvester Feuerwerk",
+	"entity.luckytntmod.pulsar_tnt" : "Pulsar TNT",
+	"entity.luckytntmod.lightning_storm" : "Gewitter",
+	"entity.luckytntmod.silk_touch_tnt" : "Behutsamkeit TNT",
 		
 	"entity.luckytntmod.dynamite" : "Dynamit",
 		
