--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -79,6 +79,7 @@
 	"block.luckytntmod.ore_tnt" : "Erze TNT",
 	"block.luckytntmod.redstone_tnt" : "Redstone TNT",
 	"block.luckytntmod.random_tnt" : "Zuf\u00e4lliges TNT",
+	"block.luckytntmod.turret_tnt" : "Gesch\u00FCtz TNT",
 	"block.luckytntmod.pulse_tnt" : "Pulsierendes TNT",
 	"block.luckytntmod.dividing_tnt" : "Teilendes TNT",
 	"block.luckytntmod.picky_tnt" : "W\u00e4hlerisches TNT",
@@ -226,6 +227,7 @@
 	"entity.luckytntmod.ore_tnt" : "Erze TNT",
 	"entity.luckytntmod.redstone_tnt" : "Redstone TNT",
 	"entity.luckytntmod.random_tnt" : "Zuf\u00e4lliges TNT",
+	"entity.luckytntmod.turret_tnt" : "Gesch\u00FCtz TNT",
 	"entity.luckytntmod.pulse_tnt" : "Pulsierendes TNT",
 	"entity.luckytntmod.dividing_tnt" : "Teilendes TNT",
 	"entity.luckytntmod.picky_tnt" : "W\u00e4hlerisches TNT",
