--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -79,6 +79,7 @@
 	"block.luckytntmod.ore_tnt" : "Ore TNT",
 	"block.luckytntmod.redstone_tnt" : "Redstone TNT",
 	"block.luckytntmod.random_tnt" : "Random TNT",
+	"block.luckytntmod.turret_tnt" : "Turret TNT",
 	"block.luckytntmod.pulse_tnt" : "Pulse TNT",
 	"block.luckytntmod.dividing_tnt" : "Dividing TNT",
 	"block.luckytntmod.picky_tnt" : "Picky TNT",
@@ -227,6 +228,7 @@
 	"entity.luckytntmod.ore_tnt" : "Ore TNT",
 	"entity.luckytntmod.redstone_tnt" : "Redstone TNT",
 	"entity.luckytntmod.random_tnt" : "Random TNT",
+	"entity.luckytntmod.turret_tnt" : "Turret TNT",
 	"entity.luckytntmod.pulse_tnt" : "Pulse TNT",
 	"entity.luckytntmod.dividing_tnt" : "Dividing TNT",
 	"entity.luckytntmod.picky_tnt" : "Picky TNT",
