--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -304,6 +304,26 @@
 	"luckytntmod.config.reset" : "Zur\u00fccksetzen",
 	"luckytntmod.config.island_offset" : "Fliegende Insel H\u00f6he",
 	"luckytntmod.config.drop_offset" : "Fallende Projektil H\u00f6he",
+  	"luckytntmod.config.first_tnt": "Erste Custom TNT Explosion",  	
+  	"luckytntmod.config.first_type": "Erste Explosionsart",  	
+  	"luckytntmod.config.first_intensity": "Erste Explosionsst\u00e4rke",  	
+  	"luckytntmod.config.second_tnt": "Zweite Custom TNT Explosion",  	
+  	"luckytntmod.config.second_type": "Zweite Explosionsart",  	
+  	"luckytntmod.config.second_intensity": "Zweite Explosionst\u00e4rke",  	
+  	"luckytntmod.config.third_tnt": "Dritte Custom TNT Explosion",  	
+  	"luckytntmod.config.third_type": "Dritte Explosionsart",  	
+  	"luckytntmod.config.third_intensity": "Dritte Explosionsst\u00e4rke",  	
+  	"luckytntmod.config.custom_tnt": "Custom TNT Konfiguration",
+	"luckytntmod.config.no_tnt": "Keine Explosion",
+	"luckytntmod.config.normal_tnt": "Normale Explosion",
+	"luckytntmod.config.spherical_tnt": "Kugelf\u00f6rmige Explosion",
+	"luckytntmod.config.cubical_tnt": "W\u00fcrfelf\u00f6rmige Explosion",
+	"luckytntmod.config.easter_egg_tnt": "Osterei Explosion",
+	"luckytntmod.config.firework_tnt": "Feuerwerk Explosion",
+	"luckytntmod.config.next": "Weiter",
+	"luckytntmod.config.back": "Zur\u00fcck",
+	"luckytntmod.config.true": "Wahr",
+	"luckytntmod.config.false": "Falsch",
 	
 	"death.attack.say_goodbye" : "%1$s sagte auf Wiedersehen"
 }
