--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -305,6 +305,26 @@
 	"luckytntmod.config.reset" : "Reset",
 	"luckytntmod.config.island_offset" : "Floating Island height",
 	"luckytntmod.config.drop_offset" : "Dropped projectiles height",
+  	"luckytntmod.config.first_tnt": "First Custom TNT Explosion",  	
+  	"luckytntmod.config.first_type": "First Explosion Type",  	
+  	"luckytntmod.config.first_intensity": "First Explosion Intensity",  	
+  	"luckytntmod.config.second_tnt": "Second Custom TNT Explosion",  	
+  	"luckytntmod.config.second_type": "Second Explosion Type",  	
+  	"luckytntmod.config.second_intensity": "Second Explosion Intensity",  	
+  	"luckytntmod.config.third_tnt": "Third Custom TNT Explosion",  	
+  	"luckytntmod.config.third_type": "Third Explosion Type",  	
+  	"luckytntmod.config.third_intensity": "Third Explosion Intensity",  	
+  	"luckytntmod.config.custom_tnt": "Custom TNT Configuration",
+	"luckytntmod.config.no_tnt": "No Explosion",
+	"luckytntmod.config.normal_tnt": "Normal Explosion",
+	"luckytntmod.config.spherical_tnt": "Spherical Explosion",
+	"luckytntmod.config.cubical_tnt": "Cubical Explosion",
+	"luckytntmod.config.easter_egg_tnt": "Easter Egg Explosion",
+	"luckytntmod.config.firework_tnt": "Firework Explosion",
+	"luckytntmod.config.next": "Next",
+	"luckytntmod.config.back": "Back",
+	"luckytntmod.config.true": "True",
+	"luckytntmod.config.false": "False",
 	
 	"death.attack.say_goodbye" : "%1$s said goodbye"
 }
