--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -139,6 +139,19 @@
 	"block.smoke_tnt.description" : "\u00A77\u00A7o\u00c4ndere die Farbe des Rauchs indem du mit roter, gr\u00fcner, blauer, wei\u00dfer oder schwarzer Farbe darauf rechts-klickst!",
 
 	"item.luckytntmod.dynamite" : "Dynamit",
+	"item.luckytntmod.dynamite_x5" : "Dynamit x5",
+	"item.luckytntmod.dynamite_x20" : "Dynamit x20",
+	"item.luckytntmod.dynamite_x100" : "Dynamit x100",
+	"item.luckytntmod.dynamite_x500" : "Dynamit x500",
+	"item.luckytntmod.fire_dynamite" : "Feuer Dynamit",
+	"item.luckytntmod.snow_dynamite" : "Schnee Dynamit",
+	"item.luckytntmod.dynamite_firework" : "Dynamit Feuerwerk",
+	"item.luckytntmod.nuclear_dynamite" : "Nukleares Dynamit",
+	"item.luckytntmod.freeze_dynamite" : "Gefrorenes Dynamit",
+	"item.luckytntmod.floating_dynamite" : "Schwebendes Dynamit",
+	"item.luckytntmod.sphere_dynamite" : "Kugel Dynamit",
+	"item.luckytntmod.flat_dynamite" : "Ebenen Dynamit",
+	"item.luckytntmod.miningflat_dynamite" : "Bergbauebenen Dynamit",
 
 	"item.luckytntmod.nuclear_waste" : "Atomm\u00FCll",
 	"item.luckytntmod.red_candy" : "Rotes Bonbon",
@@ -277,6 +290,19 @@
 	"entity.luckytntmod.reversed_tnt" : "Umgekehrtes TNT",
 		
 	"entity.luckytntmod.dynamite" : "Dynamit",
+	"entity.luckytntmod.dynamite_x5" : "Dynamit x5",
+	"entity.luckytntmod.dynamite_x20" : "Dynamit x20",
+	"entity.luckytntmod.dynamite_x100" : "Dynamit x100",
+	"entity.luckytntmod.dynamite_x500" : "Dynamit x500",
+	"entity.luckytntmod.fire_dynamite" : "Feuer Dynamit",
+	"entity.luckytntmod.snow_dynamite" : "Schnee Dynamit",
+	"entity.luckytntmod.dynamite_firework" : "Dynamit Feuerwerk",
+	"entity.luckytntmod.nuclear_dynamite" : "Nukleares Dynamit",
+	"entity.luckytntmod.freeze_dynamite" : "Gefrorenes Dynamit",
+	"entity.luckytntmod.floating_dynamite" : "Schwebendes Dynamit",
+	"entity.luckytntmod.sphere_dynamite" : "Kugel Dynamit",
+	"entity.luckytntmod.flat_dynamite" : "Ebenen Dynamit",
+	"entity.luckytntmod.miningflat_dynamite" : "Bergbauebenen Dynamit",
 		
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.spiral_projectile" : "Spiralen TNT",
