--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -139,6 +139,19 @@
 	"block.smoke_tnt.description" : "\u00A77\u00A7oChange the color of the smoke by right-clicking the TNT with red, green, blue, white or black dye!",
 
 	"item.luckytntmod.dynamite" : "Dynamite",
+	"item.luckytntmod.dynamite_x5" : "Dynamite x5",
+	"item.luckytntmod.dynamite_x20" : "Dynamite x20",
+	"item.luckytntmod.dynamite_x100" : "Dynamite x100",
+	"item.luckytntmod.dynamite_x500" : "Dynamite x500",
+	"item.luckytntmod.fire_dynamite" : "Fire Dynamite",
+	"item.luckytntmod.snow_dynamite" : "Snow Dynamite",
+	"item.luckytntmod.dynamite_firework" : "Dynamite Firework",
+	"item.luckytntmod.nuclear_dynamite" : "Nuclear Dynamite",
+	"item.luckytntmod.freeze_dynamite" : "Freeze Dynamite",
+	"item.luckytntmod.floating_dynamite" : "Floating Dynamite",
+	"item.luckytntmod.sphere_dynamite" : "Sphere Dynamite",
+	"item.luckytntmod.flat_dynamite" : "Flat Dynamite",
+	"item.luckytntmod.miningflat_dynamite" : "Miningflat Dynamite",
 
 	"item.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"item.luckytntmod.red_candy" : "Red Candy",
@@ -278,7 +291,20 @@
 	"entity.luckytntmod.reversed_tnt" : "Reversed TNT",
 				
 	"entity.luckytntmod.dynamite" : "Dynamite",
-
+	"entity.luckytntmod.dynamite_x5" : "Dynamite x5",
+	"entity.luckytntmod.dynamite_x20" : "Dynamite x20",
+	"entity.luckytntmod.dynamite_x100" : "Dynamite x100",
+	"entity.luckytntmod.dynamite_x500" : "Dynamite x500",
+	"entity.luckytntmod.fire_dynamite" : "Fire Dynamite",
+	"entity.luckytntmod.snow_dynamite" : "Snow Dynamite",
+	"entity.luckytntmod.dynamite_firework" : "Dynamite Firework",
+	"entity.luckytntmod.nuclear_dynamite" : "Nuclear Dynamite",
+	"entity.luckytntmod.freeze_dynamite" : "Freeze Dynamite",
+	"entity.luckytntmod.floating_dynamite" : "Floating Dynamite",
+	"entity.luckytntmod.sphere_dynamite" : "Sphere Dynamite",
+	"entity.luckytntmod.flat_dynamite" : "Flat Dynamite",
+	"entity.luckytntmod.miningflat_dynamite" : "Miningflat Dynamite",
+	
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.spiral_projectile" : "Spiral TNT",
 	"entity.luckytntmod.erupting_projectile" : "Erupting TNT",
