--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -54,7 +54,7 @@
 	"block.luckytntmod.angry_miners" : "W\u00FCtendes Minenarbeiter",
 	"block.luckytntmod.withering_tnt" : "Ausd\u00f6rrendes TNT",
 	"block.luckytntmod.nuclear_waste_tnt" : "Atomm\u00FCll TNT",
-	"block.luckytntmod.staic_tnt" : "Statisches TNT",
+	"block.luckytntmod.static_tnt" : "Statisches TNT",
 	"block.luckytntmod.pumpkin_bomb" : "K\u00FCrbis Bombe",
 	"block.luckytntmod.smoke_tnt" : "Rauch TNT",
 	"block.luckytntmod.troll_tnt" : "Troll TNT",
@@ -215,7 +215,7 @@
 	"entity.luckytntmod.angry_miners" : "W\u00FCtendes Minenarbeiter",
 	"entity.luckytntmod.withering_tnt" : "Ausd\u00f6rrendes TNT",
 	"entity.luckytntmod.nuclear_waste_tnt" : "Atomm\u00FCll TNT",
-	"entity.luckytntmod.staic_tnt" : "Statisches TNT",
+	"entity.luckytntmod.static_tnt" : "Statisches TNT",
 	"entity.luckytntmod.pumpkin_bomb" : "K\u00FCrbis Bombe",
 	"entity.luckytntmod.smoke_tnt" : "Rauch TNT",
 	"entity.luckytntmod.troll_tnt" : "Troll TNT",
@@ -305,10 +305,12 @@
 	"entity.luckytntmod.miningflat_dynamite" : "Bergbauebenen Dynamit",
 		
 	"entity.luckytntmod.meteor" : "Meteor",
+	"entity.luckytntmod.mini_meteor" : "Mini Meteor",
 	"entity.luckytntmod.spiral_projectile" : "Spiralen TNT",
 	"entity.luckytntmod.erupting_projectile" : "Ausbrechendes TNT",
 	"entity.luckytntmod.chemical_projectile" : "Chemisches TNT",
 	"entity.luckytntmod.cluster_bomb" : "Streubombe",
+	"entity.luckytntmod.present" : "Geschenk",
 	"entity.luckytntmod.bomb" : "Bombe",
 	"entity.luckytntmod.ice_meteor" : "Eismeteor",
 	"entity.luckytntmod.pompeii_projectile" : "Pompeii Projektil",
