--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -54,7 +54,7 @@
 	"block.luckytntmod.angry_miners" : "Angry Miners",
 	"block.luckytntmod.withering_tnt" : "Withering TNT",
 	"block.luckytntmod.nuclear_waste_tnt" : "Nuclear Waste TNT",
-	"block.luckytntmod.staic_tnt" : "Static TNT",
+	"block.luckytntmod.static_tnt" : "Static TNT",
 	"block.luckytntmod.pumpkin_bomb" : "Pumpkin Bomb",
 	"block.luckytntmod.smoke_tnt" : "Smoke TNT",
 	"block.luckytntmod.troll_tnt" : "Troll TNT",
@@ -216,7 +216,7 @@
 	"entity.luckytntmod.angry_miners" : "Angry Miners",
 	"entity.luckytntmod.withering_tnt" : "Withering TNT",
 	"entity.luckytntmod.nuclear_waste_tnt" : "Nuclear Waste TNT",
-	"entity.luckytntmod.staic_tnt" : "Static TNT",
+	"entity.luckytntmod.static_tnt" : "Static TNT",
 	"entity.luckytntmod.pumpkin_bomb" : "Pumpkin Bomb",
 	"entity.luckytntmod.smoke_tnt" : "Smoke TNT",
 	"entity.luckytntmod.troll_tnt" : "Troll TNT",
@@ -306,11 +306,13 @@
 	"entity.luckytntmod.miningflat_dynamite" : "Miningflat Dynamite",
 	
 	"entity.luckytntmod.meteor" : "Meteor",
+	"entity.luckytntmod.mini_meteor" : "Mini Meteor",
 	"entity.luckytntmod.spiral_projectile" : "Spiral TNT",
 	"entity.luckytntmod.erupting_projectile" : "Erupting TNT",
 	"entity.luckytntmod.chemical_projectile" : "Chemical TNT",
 	"entity.luckytntmod.cluster_bomb" : "Cluster Bomb",
 	"entity.luckytntmod.bomb" : "Bomb",
+	"entity.luckytntmod.present" : "Present",
 	"entity.luckytntmod.ice_meteor" : "Ice Meteor",
 	"entity.luckytntmod.pompeii_projectile" : "Pompeii Projectile",
 	"entity.luckytntmod.chicxulub_meteor": "Chicxulub Meteor",
